<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/TrimathMenu"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    android:paddingTop="50dp">
    <Button
        android:id="@+id/backToMenuFromTrimath"
        android:text="@string/back"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@color/buttonColor1"
        android:layout_gravity="bottom|start"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/playTrimath"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:background="@color/buttonColor1"
        android:text="@string/play"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>
    <TextView
        android:id="@+id/TrimathText"
        android:padding="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:text="@string/TrimathText"/>
    <TextView
        android:id="@+id/TrimathText2"
        android:layout_below="@id/TrimathText"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:padding="15dp"
        android:text="@string/TrimathText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</RelativeLayout>
